--- a/automations/102 bedroom 1/wallswitch_light_ceiling.yaml
+++ b/automations/102 bedroom 1/wallswitch_light_ceiling.yaml
@@ -11,7 +11,7 @@
       to        : 'off'
   condition:
     - condition    : template
-      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
+      value_template: "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
   action:
     - service   : light.toggle
       entity_id : light.bedroom_1_lights
