--- a/automations/001 restroom/light_on.yaml
+++ b/automations/001 restroom/light_on.yaml
@@ -9,7 +9,7 @@
       to           : 'on'
   condition:
     - condition    : template
-      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
+      value_template: "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
     - condition    : state
       entity_id    : input_boolean.cleaning_mode
       state        : 'off'
