--- a/automations/104 bathroom/climate.yaml
+++ b/automations/104 bathroom/climate.yaml
@@ -20,7 +20,7 @@
         - "08:30:00"
   condition:
     - condition : template
-      value_template: "{{  (((as_timestamp(now()) - as_timestamp(states('sensor.home_assistant_uptime'))) % 3600) / 60) | int > 2 }}"
+      value_template: "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
   action:
     - choose:
         # Turn radiator off
