--- a/automations/400 general/stefan/arrives_home.yaml
+++ b/automations/400 general/stefan/arrives_home.yaml
@@ -11,10 +11,10 @@
       entity_id : 'binary_sensor.anybody_home'
       state     : 'on'
   action:
-    - service   : tts.google_translate_say
+    - service   : tts.cloud_say
       entity_id : media_player.smart_speaker
       data:
         message : 'Stefan is thuis.'
-        language: 'nl'
+        language: 'nl-NL'
     - delay:
         seconds : 5 # cooldown timer
