Decrease amount of log messages

--- a/integrations/logger.yaml
+++ b/integrations/logger.yaml
@@ -3,7 +3,7 @@
 #################################################################
 
 logger:
-  default: info
+  default: warning
   logs:
     homeassistant.components.plex.media_player : info
     
