--- a/automations/103 bedroom 2/lights_turn_off_after_timeout.yaml
+++ b/automations/103 bedroom 2/lights_turn_off_after_timeout.yaml
@@ -1,5 +1,6 @@
 - alias         : bedroom_2_lights_turn_off_after_timeout
   id            : 16421514-3952-43f2-9759-b1887e184169
+  initial_state : false
   trigger:
     - platform  : state
       entity_id : light.bedroom_2_ceiling
