--- a/automations/104 bathroom/climate.yaml
+++ b/automations/104 bathroom/climate.yaml
@@ -11,6 +11,7 @@
         - binary_sensor.bathroom_windowsensor
         - binary_sensor.anybody_home
         - input_number.bathroom_target_temp
+        - binary_sensor.bathroom_hygrostat
     - platform  : time
       at:
         - "18:45:00"
@@ -62,6 +63,9 @@
               - condition     : time   # Set temp on evenings
                 after         : "18:45:00"
                 before        : "22:30:00"
+              - condition     : state
+                entity_id     : binary_sensor.bathroom_hygrostat
+                state         : 'on' # high humidity detected
           sequence:
             - service         : climate.set_temperature
               data:
