--- a/entities/binary_sensors/hygrostats.yaml
+++ b/entities/binary_sensors/hygrostats.yaml
@@ -1,8 +1,8 @@
 - platform        : generic_hygrostat
   name            : bathroom_hygrostat
   sensor          : sensor.bathroom_tempsensor_humidity # Source humidity sensor
-  delta_trigger   : 3                                   # Optional humidity swing to detect. Default = 3
-  target_offset   : 3                                   # Optional dehumidification target offset. Default = 3
-  max_on_time     : 3600                                # Optional safety max on time in seconds. Default = 7200 seconds
-  sample_interval : 60                                  # Optional time between taking humidity samples in seconds, default 300 seconds
-  min_humidity    : 30                                  # Optional minimum humidity to enable dehumidification. Don't turn on when humidity is less than 30%
+  delta_trigger   : 10                                  # Optional humidity swing to detect (%). Default = 3
+  target_offset   : 10                                  # Optional dehumidification target offset (%). Default = 3
+  max_on_time     : 3600                                # Optional safety max on time (sec). Default = 7200 sec
+  sample_interval : 20                                  # Optional time between taking humidity samples (sec). Default = 300 sec
+  min_humidity    : 30                                  # Optional minimum humidity to enable dehumidification (%). Don't turn on when humidity is less than 30%
