--- a/esphome/shelly_6.yaml
+++ b/esphome/shelly_6.yaml
@@ -3,70 +3,4 @@ substitutions:
   devicelocation : "Second Floor Landing"
   ip_address     : !secret ip_address_shelly6
 
-esphome:
-  name        : $devicename
-  platform    : ESP8266
-  board       : esp01_1m
-
-wifi:
-  ssid        : !secret wifi_ssid
-  password    : !secret wifi_password
-  ap:
-    ssid      : "${devicelocation} Hotspot"
-    password  : !secret wifi_fallback_password
-  manual_ip:
-    static_ip : ${ip_address}
-    gateway   : !secret gateway_ip
-    subnet    : 255.255.255.0
-
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-# Enable Web server.
-web_server:
-  port        : 80
-
-# Sync time with Home Assistant.
-time:
-  - platform             : homeassistant
-    id                   : homeassistant_time
-
-sensor:
-  # Sensors with general information.
-  - platform             : uptime
-    name                 : "${devicelocation} Uptime Sensor"
-    update_interval      : 60s
-
-  - platform             : wifi_signal
-    name                 : "${devicelocation} WiFi Signal"
-    update_interval      : 60s
-
-text_sensor:
-  - platform             : version
-    name                 : "${devicelocation} Version"
-
-binary_sensor:
-  - platform             : gpio
-    pin                  : GPIO5
-    name                 : "${devicelocation} Switch"
-    filters:
-      - delayed_on       : 10ms
-      - delayed_off      : 10ms
-
-switch:
-  # Switch to restart the plug
-  - platform             : restart
-    name                 : "${devicelocation} Restart"
-
-# Output is not used and not connected
-output:
-  - platform             : gpio
-    pin                  : GPIO4
-    id                   : relay_output
+<<: !include shared/device_shelly_output_off.yaml
