--- a/esphome/d1_mini_mechanical_ventilation.yaml
+++ b/esphome/d1_mini_mechanical_ventilation.yaml
@@ -17,58 +17,31 @@
 # Credits: https://gist.github.com/SqyD/38d10391c2e21988406d2bdaec24f031
 
 substitutions:
-  devicename        : "d1_mini_mechanical_ventilation"
+  devicename        : "d1_mini_mech_vent"
   devicelocation    : "Mech Vent"
   ip_address        : !secret ip_address_d1_mini_MV
+  status_led_pin    : GPIO2
 
 esphome:
   name              : $devicename
   platform          : ESP8266
   board             : d1_mini_lite
 
-wifi:
-  ssid              : !secret wifi_ssid
-  password          : !secret wifi_password
-  ap:
-    ssid            : "${devicelocation} Fallback Hotspot"
-    password        : !secret wifi_fallback_password
-  manual_ip:
-    static_ip       : ${ip_address}
-    gateway         : !secret gateway_ip
-    subnet          : 255.255.255.0
+<<: !include shared/common.yaml
+<<: !include shared/status_led.yaml
 
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-# Enable Web server.
-web_server:
-  port              : 80
-
-# Sync time with Home Assistant.
-time:
-  - platform        : homeassistant
-    id              : homeassistant_time
-
-sensor:
-  # Sensors with general information.
-  - platform        : uptime
-    name            : "${devicelocation} Uptime Sensor"
-    update_interval : 60s
-
-  - platform        : wifi_signal
-    name            : "${devicelocation} WiFi Signal"
-    update_interval : 60s
+binary_sensor:
+  - !include shared/binary_sensors/status.yaml
 
 text_sensor:
-  - platform        : version
-    name            : "${devicelocation} Version"
+  - !include shared/text_sensors/version.yaml
+
+sensor:
+  - !include shared/sensors/uptime.yaml
+  - !include shared/sensors/wifi_signal.yaml
+
+switch:
+  - !include shared/switches/restart.yaml
 
 output:
   platform          : esp8266_pwm
@@ -91,17 +64,3 @@ fan:
     low             : 0.25
     medium          : 0.45
     high            : 0.8
-
-switch:
-  # Switch to restart the plug
-  - platform        : restart
-    name            : "${devicelocation} Restart"
-
-binary_sensor:
-  - platform        : status
-    name            : "${devicelocation} Status"
-
-status_led:
-  pin:
-    number          : GPIO2
-    inverted        : True
