--- a/esphome/esp32cam_1.yaml
+++ b/esphome/esp32cam_1.yaml
@@ -2,77 +2,35 @@ substitutions:
   devicename     : "esp32cam_1"
   devicelocation : "ESP32Cam 1"
   ip_address     : !secret ip_address_esp32cam1
+  status_led_pin : GPIO33  # Red led output
 
 esphome:
-  name        : $devicename
-  platform    : ESP32
-  board       : esp32dev
-# board       : esp-wrover-kit  # alternative board
+  name           : $devicename
+  platform       : ESP32
+  board          : esp32dev
+# board          : esp-wrover-kit  # alternative board
 
-wifi:
-  ssid        : !secret wifi_ssid
-  password    : !secret wifi_password
-  ap:
-    ssid      : "${devicelocation} Fallback Hotspot"
-    password  : !secret wifi_fallback_password
-  manual_ip:
-    static_ip : ${ip_address}
-    gateway   : !secret gateway_ip
-    subnet    : 255.255.255.0
-
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-# Enable Web server.
-web_server:
-  port        : 80
-
-# Sync time with Home Assistant.
-time:
-  - platform        : homeassistant
-    id              : homeassistant_time
-
-sensor:
-  # Sensors with general information.
-  - platform        : uptime
-    name            : "${devicelocation} Uptime Sensor"
-    update_interval : 60s
-
-  - platform        : wifi_signal
-    name            : "${devicelocation} WiFi Signal"
-    update_interval : 60s
-
-text_sensor:
-  - platform        : version
-    name            : "${devicelocation} Version"
+<<: !include shared/common.yaml
+<<: !include shared/status_led.yaml
 
 binary_sensor:
-  - platform        : status
-    name            : "${devicelocation} Status"
+  - !include shared/binary_sensors/status.yaml
+
+text_sensor:
+  - !include shared/text_sensors/version.yaml
+
+sensor:
+  - !include shared/sensors/uptime.yaml
+  - !include shared/sensors/wifi_signal.yaml
 
 switch:
-  # Switch to restart the plug
-  - platform        : restart
-    name            : "${devicelocation} Restart"
+  - !include shared/switches/restart.yaml
   # Flash light of camera
   - platform        : gpio
     pin             : GPIO4
     name            : "${devicelocation} Flash"
 
-# Uses the red LED as a status indicator
-status_led:
-  pin:
-    number          : GPIO33  # Red led output
-    inverted        : true
-
-# Info here: https://esphome.io/components/esp32_camera.html
+# https://esphome.io/components/esp32_camera.html
 esp32_camera:
   external_clock:
     pin             : GPIO0
