--- a/esphome/nodemcu_home_office.yaml
+++ b/esphome/nodemcu_home_office.yaml
@@ -19,63 +19,30 @@
 # Reference / photo: https://randomnerdtutorials.com/esp8266-pinout-reference-gpios/
 
 substitutions:
-  devicename     : "nodemcu_office"
-  devicelocation : "Home Office"
-  ip_address     : !secret ip_address_nodemcu_1
+  devicename        : "nodemcu_office"
+  devicelocation    : "Home Office"
+  ip_address        : !secret ip_address_nodemcu_1
+  status_led_pin    : GPIO2
 
 esphome:
-  name        : $devicename
-  platform    : ESP8266
-  board       : nodemcuv2
+  name              : $devicename
+  platform          : ESP8266
+  board             : nodemcuv2
   on_boot:
-    priority  : -10
+    priority        : -10
     then:
       - switch.turn_on: switch_relay4
       - switch.turn_on: switch_relay6
 
-wifi:
-  ssid        : !secret wifi_ssid
-  password    : !secret wifi_password
-  ap:
-    ssid      : "${devicelocation} Fallback Hotspot"
-    password  : !secret wifi_fallback_password
-  manual_ip:
-    static_ip : ${ip_address}
-    gateway   : !secret gateway_ip
-    subnet    : 255.255.255.0
-
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-# Enable Web server.
-web_server:
-  port        : 80
-
-# Sync time with Home Assistant.
-time:
-  - platform             : homeassistant
-    id                   : homeassistant_time
-
-sensor:
-  # Sensors with general information.
-  - platform             : uptime
-    name                 : "${devicelocation} Uptime Sensor"
-    update_interval      : 60s
-
-  - platform             : wifi_signal
-    name                 : "${devicelocation} WiFi Signal"
-    update_interval      : 60s
+<<: !include shared/common.yaml
+<<: !include shared/status_led.yaml
 
 text_sensor:
-  - platform             : version
-    name                 : "${devicelocation} Version"
+  - !include shared/text_sensors/version.yaml
+
+sensor:
+  - !include shared/sensors/uptime.yaml
+  - !include shared/sensors/wifi_signal.yaml
 
 output:
   - platform        : gpio
@@ -126,9 +93,7 @@ light:
     output          : relay5_output
 
 switch:
-  # Switch to restart the plug
-  - platform        : restart
-    name            : "${devicelocation} Restart"
+  - !include shared/switches/restart.yaml
   - platform        : output
     name            : "Bedroom 3 Ceiling Power"
     output          : relay4_output
@@ -197,11 +162,4 @@ binary_sensor:
               - delay          : 300ms
               - light.turn_on  : lightstudy3
 
-
-  - platform        : status
-    name            : "${devicelocation} Status"
-
-status_led:
-  pin:
-    number     : GPIO2
-    inverted   : True
+  - !include shared/binary_sensors/status.yaml
