--- a/esphome/shared/device_powerplug.yaml
+++ b/esphome/shared/device_powerplug.yaml
@@ -3,45 +3,15 @@ esphome:
   platform    : ESP8266
   board       : esp8285
 
-wifi:
-  ssid        : !secret wifi_ssid
-  password    : !secret wifi_password
-  ap:
-    ssid      : "${devicename} Fallback Hotspot"
-    password  : !secret wifi_fallback_password
-  manual_ip:
-    static_ip : ${ip_address}
-    gateway   : !secret gateway_ip
-    subnet    : 255.255.255.0
+<<: !include common.yaml
+<<: !include status_led.yaml
 
-captive_portal:
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-
-ota:
-
-# Enable Web server.
-web_server:
-  port        : 80
-
-# Sync time with Home Assistant.
-time:
-  - platform             : homeassistant
-    id                   : homeassistant_time
+text_sensor:
+  - !include text_sensors/version.yaml
 
 sensor:
-  # Sensors with general information.
-  - platform             : uptime
-    name                 : "${devicelocation} Uptime Sensor"
-    update_interval      : 60s
-
-  - platform             : wifi_signal
-    name                 : "${devicelocation} WiFi Signal"
-    update_interval      : 60s
+  - !include sensors/uptime.yaml
+  - !include sensors/wifi_signal.yaml
 
   # Measure power
   - platform             : hlw8012
@@ -111,10 +81,6 @@ sensor:
     unit_of_measurement  : kWh
     icon                 : mdi:clock-alert
 
-text_sensor:
-  - platform             : version
-    name                 : "${devicelocation} Version"
-
 binary_sensor:
   # Binary sensor for the button press
   - platform             : gpio
@@ -128,14 +94,11 @@ binary_sensor:
       - delayed_off      : 10ms
     on_press:
       - switch.toggle    : relay
-      
-  - platform             : status
-    name                 : "${devicelocation} Status"
+
+  - !include binary_sensors/status.yaml
 
 switch:
-  # Switch to restart the plug
-  - platform             : restart
-    name                 : "${devicelocation} Restart"
+  - !include switches/restart.yaml
 
   # Switch to toggle the relay
   - platform             : gpio
@@ -161,9 +124,3 @@ output:
     pin:
       number             : GPIO02  # State led output
       inverted           : true
-
-# Uses the red LED as a status indicator
-status_led:
-  pin:
-    number               : GPIO00  # Red led output
-    inverted             : true
