--- a/esphome/shelly_4.yaml
+++ b/esphome/shelly_4.yaml
@@ -3,4 +3,4 @@ substitutions:
   devicelocation : "First Floor Landing"
   ip_address     : !secret ip_address_shelly4
 
-<<: !include .shellyforhue_base.yaml
+<<: !include shared/device_shelly_output_on.yaml
