--- a/esphome/shelly_2.yaml
+++ b/esphome/shelly_2.yaml
@@ -3,4 +3,4 @@ substitutions:
   devicelocation : "Hallway"
   ip_address     : !secret ip_address_shelly2
 
-<<: !include shared/device_shelly_output_toggle.yaml
+<<: !include shared/device_shelly.yaml
