--- a/automations/200 landing/wallswitch_light_ceiling.yaml
+++ b/automations/200 landing/wallswitch_light_ceiling.yaml
@@ -1,14 +1,10 @@
 - alias             : second_floor_landing_wallswitch_light_ceiling
   id                : 070061ac-b0a7-4dc9-a168-879ce6809d7e
   trigger:
-    - platform      : state
-      entity_id     : binary_sensor.second_floor_landing_switch
-      from          : 'off'
-      to            : 'on'
-    - platform      : state
-      entity_id     : binary_sensor.second_floor_landing_switch
-      from          : 'on'
-      to            : 'off'
+    - platform      : event
+      event_type    : esphome.button_switched
+      event_data:
+        location    : "Second Floor Landing"
     - platform      : event
       event_type    : zha_event
       event_data:
