--- a/esphome/shelly_1.yaml
+++ b/esphome/shelly_1.yaml
@@ -3,4 +3,4 @@ substitutions:
   devicelocation : "Restroom"
   ip_address     : !secret ip_address_shelly1
 
-<<: !include shared/device_shelly_output_toggle.yaml
+<<: !include shared/device_shelly.yaml
