--- a/entities/lights/lightswitches.yaml
+++ b/entities/lights/lightswitches.yaml
@@ -1,3 +1,3 @@
 - platform : switch
-  name     : living_room_sideboard
-  entity_id: switch.living_room_sideboard_outlet
+  name     : kitchen_sideboard
+  entity_id: switch.kitchen_sideboard_outlet
