--- a/automations/101 masterbedroom/6gang/press_on.yaml
+++ b/automations/101 masterbedroom/6gang/press_on.yaml
@@ -6,12 +6,9 @@
       event_data:
         device_ieee         : 04:cf:8c:df:3c:75:b3:fb
         command             : 'on'
-  condition:
-    - condition             : state
-      entity_id             : light.bedroom_master_ceiling
-      state                 : 'off'
   action:
     - service               : light.turn_on
       data:
         entity_id           : light.bedroom_master_ceiling
-        transition          : 1.5
+        transition          : 1
+        profile             : relax
