--- a/automations/101 masterbedroom/6gang/press_dim_down.yaml
+++ b/automations/101 masterbedroom/6gang/press_dim_down.yaml
@@ -1,5 +1,7 @@
 - alias                     : bedroom_master_6gang_press_dim_down   # MID LEFT
   id                        : ae780114-eab6-4dfb-80ed-c30283b4442a
+  mode                      : restart
+  max_exceeded              : silent
   trigger:
     - platform              : event
       event_type            : zha_event
@@ -14,5 +16,5 @@
     - service               : light.turn_on
       data:
         entity_id           : light.bedroom_master_ceiling
-        transition          : 0.5
-        brightness_step_pct : -10
+        transition          : 1
+        brightness_step_pct : -25
