--- a/automations/101 masterbedroom/6gang/press_house_off.yaml
+++ b/automations/101 masterbedroom/6gang/press_house_off.yaml
@@ -1,7 +1,7 @@
 - alias                     : bedroom_master_6gang_press_house_off
   id                        : cc99321c-a134-46c0-80e2-23e0521298db
-  mode                      : queued
-  max                       : 2
+  mode                      : single
+  max_exceeded              : silent
   trigger:
     - platform              : event
       event_type            : zha_event
@@ -29,12 +29,11 @@
     - service               : light.turn_off
       data:
         entity_id           : all
-        transition          : 0.5
+        transition          : 1
     - service               : switch.turn_off
       entity_id             : switch.wake_up_vaste_pc
     - service               : remote.turn_off
       entity_id             : remote.roelofs_harmony_hub
-    - delay                 : '00:00:10'
     - service               : switch.turn_off
       entity_id             : switch.living_room_entertainment_outlet_relay
     - service               : switch.turn_off
