--- a/automations/104 bathroom/motion/lights_on.yaml
+++ b/automations/104 bathroom/motion/lights_on.yaml
@@ -29,19 +29,33 @@
               sequence:
                 - service         : light.turn_on
                   data:
-                    entity_id     : light.bathroom_lights
+                    entity_id     : light.bathroom_ceiling
+                    xy_color      : "{{ state_attr('sensor.circadian_values', 'xy_color') }}"
+                    brightness    : 210
+                    transition    : 1
+                - service         : light.turn_on
+                  data:
+                    entity_id     : light.bathroom_bath_ledstrip
                     kelvin        : "{{ state_attr('sensor.circadian_values', 'colortemp') | int }}"
-                    brightness_pct: "{{ state_attr('switch.circadian_lighting_landings', 'brightness') | int }}"
+                    brightness    : 220
                     transition    : 1
             default:
               - service           : light.turn_on
                 data:
-                  entity_id       : light.bathroom_lights
+                  entity_id       : light.bathroom_ceiling
                   brightness      : 5              # Integer between 0 and 255
                   xy_color:
                     - 0.675
                     - 0.322
-                  transition      : 0.5
+                  transition      : 0
+              - service           : light.turn_on
+                data:
+                  entity_id       : light.bathroom_bath_ledstrip
+                  brightness      : 50             # Integer between 0 and 255
+                  xy_color:
+                    - 0.675
+                    - 0.322
+                  transition      : 2
       default:
         - service                 : light.turn_on
           entity_id               : light.bathroom_lights
