--- a/automations/101 masterbedroom/dimmer.yaml
+++ b/automations/101 masterbedroom/dimmer.yaml
@@ -1,11 +1,9 @@
-- alias                     : bedroom_master_dimmer
-  id                        : a47952f0-c916-45d6-857c-b01b2f901947
+- alias               : bedroom_master_dimmer
+  id                  : a47952f0-c916-45d6-857c-b01b2f901947
   use_blueprint:
-    path: WarriorRocker/hue_dimmer_switch.yaml
+    path              : stefanroelofs/hue_dimmer_switchV2.yaml
     input:
-      remote           : 7ebd2ac080f3447ba5fcb3112cb8b61d
-      light:
-        entity_id      : light.bedroom_master_ceiling
-      force_brightness : False
-      brightness       : 255
-      min_brightness   : 1
+      on_button_mode  : fixed brightness when on
+      remote          : 7ebd2ac080f3447ba5fcb3112cb8b61d
+      light           : light.bedroom_master_ceiling
+      min_brightness  : 1
