Do not run automation when attribute of bathroom_hygrostat changes (I really need to replace this custom integration)

--- a/automations/202 laundry room/mechanical_ventilation.yaml
+++ b/automations/202 laundry room/mechanical_ventilation.yaml
@@ -9,8 +9,15 @@
       event_type: automation_reloaded
     - platform  : state
       entity_id:
-        - binary_sensor.bathroom_hygrostat
         - binary_sensor.anybody_home
+    - platform  : state
+      entity_id : binary_sensor.bathroom_hygrostat
+      from      : 'off'
+      to        : 'on'
+    - platform  : state
+      entity_id : binary_sensor.bathroom_hygrostat
+      from      : 'on'
+      to        : 'off'
     - platform  : time
       at:
         - "00:00:00"
