Wake up light automation. Does not work with Xiaomi clock app!

--- a/entities/sensors/time_date.yaml
+++ b/entities/sensors/time_date.yaml
@@ -4,7 +4,7 @@
     - 'date'
 #    - 'date_time'
 #    - 'date_time_utc'
-#    - 'date_time_iso'
+    - 'date_time_iso'
 #    - 'time_date'
 #    - 'time_utc'
 #    - 'beat'
